conditional GET and PUT requests including maintaining client-side document versions
git-svn-id: svn+ssh://svn.marklogic.com/project/engsvn/client-api/java/trunk@106031 62cac252-8da6-4816-9e9d-6dc37b19578c